# MarketPulse-IA

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
artifacts/: kmeans_model.pkl  marketpulse_model_20260402_120358.pkl  pca_model.pkl  standard_scaler.pkl
src/: config.py
src/api/: main.py  schemas.py
src/ingestion/: api_collector.py  scraper.py  yfinance_lab.ipynb
src/models/: clustering.py  pca_model.py  pipeline.py  profiling.py
src/processing/: cleaner.py  features.py
src/utils/: db_client.py  exceptions.py  formatters.py  logger.py
src/visualization/: plotter.py
